# anomaly-detection-dashboard

./: app.py  blockchain.py  index.html  pyproject.toml  replit.md  requirements.txt  routes.py
Anomaly Detection Dashboard/Anomaly Detection Dashboard/: app.py  blockchain.py  routes.py
Anomaly Detection Dashboard/Anomaly Detection Dashboard/static/css/: style.css
Anomaly Detection Dashboard/Anomaly Detection Dashboard/templates/: index.html
attached_assets/: Pasted-import-os-import-json-import-base64-from-IPython-display-import-display-HTML-Javascript-from-w-1756948200477_1756948200485.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
