[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-socketio>=5.3.6",  # Added for WebSocket
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "web3>=7.13.0",
    "werkzeug>=3.1.3",
    "gevent>=23.9.1",  # Added for async_mode='gevent'
    "gevent-websocket>=0.10.1",  # Added for gevent WebSocket support
    "opencv-python>=4.10.0",  # Added if not already (for cv2 on RPi)
]
